--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,17 @@ body{
 }
 
 div.flex_container{
+    display: flex;
+    flex-direction: column; /* Default */
+    flex-wrap: nowrap;
+    /* Default - All flex items will be on one line. */
     height: 100px;
-    width: 1vh;
+    width: 100%;
     background-color: rgb(240, 95, 240);
+}
+
+div.flex_child{
+
+    background-color: orange;
+    
 }
